Fallback to non-canonicalized cursor for declaration lookup in use builder.

This fixes a bug where we failed to associate a use with a declaration
when there occurred a friend declaration before the actual declaration.

BUG: 354846
BUG: 355004
BUG: 355007